Initial Commit Command Pattern and Composite Pattern added (example from OODesign.com)

--- a/OODesignExamples/OODesignExamples.csproj
+++ b/OODesignExamples/OODesignExamples.csproj
@@ -43,11 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command\StocktradeClasses.cs" />
+    <Compile Include="Composite\ShapeClasses.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Decorator\" />
+    <Folder Include="FactoryMethod\" />
+    <Folder Include="Mediator\" />
+    <Folder Include="Observer\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
