Decorator Pattern Added

--- a/OODesignExamples/OODesignExamples.csproj
+++ b/OODesignExamples/OODesignExamples.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Command\StocktradeClasses.cs" />
     <Compile Include="Composite\ShapeClasses.cs" />
+    <Compile Include="Decorator\WindowClasses.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -52,7 +53,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Decorator\" />
     <Folder Include="FactoryMethod\" />
     <Folder Include="Mediator\" />
     <Folder Include="Observer\" />
